Force Node 18 for Railway to fix MongoDB TLS error

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "inotebook-backend",
+  "name": "noteaura-backend",
   "version": "1.0.0",
   "description": "iNotebook - Your Notebook on the Cloud.",
   "main": "index.js",
+  "engines": {
+  "node": "18.x"
+},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
