--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "iNotebook - Your Notebook on the Cloud.",
   "main": "index.js",
   "engines": {
-  "node": "18.x"
-},
+    "node": "18.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.0",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jsdom": "^26.1.0",
